--- a/settings.json
+++ b/settings.json
@@ -1,19 +1,19 @@
-{
+2{
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
+	"ownerNumber": "94782770249",
+	"ownerNumberr": "+94782770249",
+	"botnumber": "94782770249",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
+	"wa": "wa.me/+94782770249",
 	"donate": "94767043432",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
-	"botname":"「 Queen Alexa 」",
-	"img":"https://k.top4top.io/p_2001zgi471.jpg",
+	"ownername": "© SAD PODDA YT",
+	"botname":"「 PODDA BOTZ 」",
+	"img":"https://ibb.co/y8pzJsg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
 	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
