--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,20 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
-	"cr": "Queen Alexa",
+	"ownerNumber": "94782770249",
+	"ownerNumberr": "+94782770249",C
+	"botnumber": "94782770249",
+	"cr": "SAD PODDA BOTZ",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
-	"donate": "94767043432",
-	"ig": "https://instagram.com/HYPER_MOD",
-	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
-	"botname":"「 Queen Alexa 」",
-	"img":"https://k.top4top.io/p_2001zgi471.jpg",
+	"wa": "wa.me/+94782770249",
+	"donate": "94782770249",
+	"ig": "https://instagram.com/",
+	"gt": "https://github.com/SAS PODDA YT",
+	"ownername": "© HSAD PODDA YT",
+	"botname":"「 SAD PODDA BOTZ 」",
+	"img":"https://ibb.co/y8pzJsg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 SAD PODDA BOTZ 」\n© SAD PODDA YT"
 }
